--- a/style/css/yes_styles.css
+++ b/style/css/yes_styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #e7a5c0;
+    background-color: #ed498d;
 }
 
 /* Position the "No" button absolutely within body */
