--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #F8C8DC;
+    background-color: #e23af1;
 }
 
 /* Position the "No" button absolutely within body */
@@ -41,7 +41,7 @@ body {
 }
 
 .btn {
-    background-color: #FFB6C1;
+    background-color: hsl(351, 99%, 58%);
     color: white;
     padding: 15px 32px;
     text-align: center;
